--- a/src/popup/actions.css
+++ b/src/popup/actions.css
@@ -152,11 +152,11 @@ body {
 }
 
 /* TEXT ELEMENTS */
-/* p {
+p {
     font-size: 1.5em;
-    margin-block-start: 0.5em;
+    margin-block-start: 0.5em; /* Override Firefox */
     margin-block-end:   0.5em;
-} */
+}
 input {
     /* clear Chrome injected style */
     outline: none;
@@ -239,6 +239,34 @@ input.disabled, input.disabled:hover {
 .tiny {
     font-size: smaller;
 }
+.helper-wrapper {
+    display:flex;
+}
+.helper-wrapper::after {
+    content: "(?)";
+    font-size: small;
+    margin-left: 5px
+}
+.helpertext {
+    position: absolute;
+    box-sizing: border-box;
+    width: calc(var(--popup-width)*0.9);
+    left: calc(var(--popup-width)*0.05); /* (100-0.9)/2 */
+    bottom: 80px; /* aligned by hand, be careful with placement! */
+    padding: 9px 13px;
+    background-color: white;
+    z-index: 4;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12),
+                0 1px 2px rgba(0,0,0,0.24), /* material design shadow */
+                0 0 40px 0 #888; /* puffy float shadow */
+    opacity: 0%;
+    transition: opacity 0.2s;
+    pointer-events: none;
+}
+.helper-wrapper:hover .helpertext {
+    opacity: 100%;
+}
+
 /*      Lovely toggle button stolen from:         */
 /* https://codepen.io/Mr_Rahul_Tiwari/pen/ZEWMZNV */
 .toggle-cover {
