--- a/src/popup/actions.css
+++ b/src/popup/actions.css
@@ -125,18 +125,18 @@ body {
                         #bdbdb8 70px 90px, /* EFEFE7 */
                         #bb5c53 90px 110px /* F0786D */
                     );
-    background-size: 295% 300%;
+    background-size: 141px 100%; /* trig maybe? Makes ends match when color wraps */
     animation-name: backgroundsweep;
     animation-timing-function: linear;
-    animation-duration: 30s;
+    animation-duration: 3s;
     animation-iteration-count: infinite;
     --progress-percentage: 50%;
 }
 @keyframes backgroundsweep {
-    from { background-position: 0% center; }
-    to   { background-position: 300% center; }
+    from { background-position: 141px center; } /* same as background size for */
+    to   { background-position: 0     center; } /* smooth animation */
 }
-.feedback-progress::before {
+.feedback-download::before, .feedback-progress::before {
     position: absolute;
     top: 0;
     left: 0;
@@ -147,8 +147,11 @@ body {
     background-image: linear-gradient(90deg, #FFF0 0 50%, #FFF6 50% 100%);
     background-size: 200%;
     background-attachment: fixed;
-    background-position: center right var(--progress-percentage);
+    background-position: center right -100%;
     transition: background-position 1s;
+}
+.feedback-progress::before {
+    background-position: center right var(--progress-percentage);
 }
 
 /* TEXT ELEMENTS */
