--- a/src/popup/actions.css
+++ b/src/popup/actions.css
@@ -65,6 +65,26 @@ body {
     opacity: 0.5;
     box-shadow: 0px 0px 2px 1px grey;
 }
+.success-attention {
+    position: relative; /* for ::before positioning */
+}
+.success-attention::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    animation-name: flash;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+}
+@keyframes flash {
+    0% {box-shadow: 0 0 14px -4px #32728C}
+    10% {box-shadow: 0 0 6px  3px #32728C}
+    20% {box-shadow: 0 0 14px -4px #32728C}
+}
 .error-attention {
     animation-name: shakehead;
     animation-duration: 250ms;
