Add salvage yard radio buttons to popup

--- a/src/popup/actions.css
+++ b/src/popup/actions.css
@@ -225,6 +225,57 @@ input.disabled, input.disabled:hover {
 #download-button {       background-color: #61A690; }
 #download-button:hover { background-color: #8BACA9; }
 
+/* SALVAGE TOGGLE */
+.slide-radio {
+    background-color: #4096B9;
+    border-radius: 4px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    
+    display: grid;
+    grid-template-columns: repeat(3, 33%);
+    
+    position: relative;
+    overflow: hidden;
+    padding: 0;
+    position: relative;
+}
+.slide-radio .slider {
+    background-color: #FFFFFFAD;
+    border-radius: 3px;
+    
+    height: calc(100% - 6px);
+    width: 33%;
+    
+    position: absolute;
+    align-self: center;
+    transition: all .2s ease;
+}
+.slide-radio input {
+    display: none;
+}
+.slide-radio label {
+    color: white;
+    transition: color 0.1s ease;
+    
+    padding: 3px;
+    text-align: center;
+    display: block;
+    margin: 3px;
+    cursor: pointer;
+    z-index: 1;
+}
+.slide-radio input:checked + label {
+    color: black;
+}
+.slide-radio input:nth-of-type(1):checked ~ .slider {
+    left: calc(0% + 3px);
+}
+.slide-radio input:nth-of-type(2):checked ~ .slider {
+    left: 33%;
+}
+.slide-radio input:nth-of-type(3):checked ~ .slider {
+    left: 66%;
+}
 
 /*---------------------------*\
   ------ SETTINGS PAGE ------  
@@ -246,7 +297,7 @@ input.disabled, input.disabled:hover {
     background-color: white;
 }
 .settings-title::after {
-    /* build shadow boarder/separator */
+    /* build shadow border/separator */
     content:"";
     position:absolute;
     width:100%;
