--- a/src/panorama/composer.css
+++ b/src/panorama/composer.css
@@ -4,13 +4,21 @@ body * {
 }
 
 /* LAYOUT */
-.horizontal {
-    display: grid;
-    grid-template-columns: repeat(5, 3fr);
-    column-gap: 1vw;
-    row-gap: 1vw;
+body {
+    display: flex;
+    flex-direction: row;
+    
+    height: calc(100vh - 16px);
+    width: calc(100vw - 16px);
+}
+@media screen and (max-aspect-ratio: 22/21) {
+    /* Screen is narrow, put thumbs below stage */
+    body {
+        flex-direction: column;
+    }
 }
 .grouped {
+    height: fit-content;
     box-sizing: border-box;
     margin: 0.5vh;
     padding: 1vh;
@@ -18,6 +26,7 @@ body * {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 .ungrouped {
+    height: fit-content;
     box-sizing: border-box;
     margin: 0.5vh;
     padding: 1vh;
@@ -29,7 +38,7 @@ body * {
     position: absolute;
     z-index: 1;
 }
-    .hover::after {
+.hover::after {
         position:absolute;
         content: "";
         height: 100%;
@@ -67,12 +76,35 @@ button.disabled, button.disabled:hover {
 }
 
 /* CONTAINERS */
+#stage-container {
+    flex-basis: 200px;
+}
+@media screen and (min-aspect-ratio: 22/21) {
+    /* Screen is wide, make stage grow */
+    #stage-container {
+        flex-grow: 6;
+    }
+}
 #thumbs {
+    flex-grow: 1;
+    flex-basis: 200px;
+    
     /* height is based on square grid elements:min-height:
     thumbs width is 20vw less 0.5vh padding, and each column
     has a 1vw gap. Appears right, probably right for the wrong reason? */
-    min-height: calc(20vw - 0.5vh + 1vw);
+    display: grid;
+    column-gap: 1vw;
+    row-gap: 1vw;
+
+    grid-template-columns: repeat(5, 3fr);
 }
+@media screen and (min-aspect-ratio: 22/21) {
+    /* Screen is wide, use fewer columns */
+    #thumbs {
+        grid-template-columns: repeat(2, 3fr);
+    }
+}
+
 .thumb-container {
     position: relative;
 }
@@ -87,7 +119,7 @@ button.disabled, button.disabled:hover {
     display: flex;
 }
 
-/* THUMBNAIL TOOLBAR */
+/* THUMBNAIL HOVERING TOOLBAR */
 #thumbs:not(:hover) .hover-bar {visibility: hidden;}
 .hover-bar {
     /* style */
