--- a/src/panorama/composer.css
+++ b/src/panorama/composer.css
@@ -10,8 +10,9 @@ body {
     
     height: calc(100vh - 16px);
     width: calc(100vw - 16px);
+    overflow: hidden;
 }
-@media screen and (max-aspect-ratio: 22/21) {
+@media screen and (max-aspect-ratio: 1000/968) {
     /* Screen is narrow, put thumbs below stage */
     body {
         flex-direction: column;
@@ -78,30 +79,45 @@ button.disabled, button.disabled:hover {
 /* CONTAINERS */
 #stage-container {
     flex-basis: 200px;
+    
+    /* .ungrouped isn't intended for things that have full-size children */
+    padding: 0;
 }
-@media screen and (min-aspect-ratio: 22/21) {
+@media screen and (min-aspect-ratio: 1000/968) {
     /* Screen is wide, make stage grow */
     #stage-container {
         flex-grow: 6;
+        
     }
 }
 #thumbs {
-    display: grid;
-    grid-template-columns: repeat(5, 3fr);
-    column-gap: 1vw;
-    row-gap: 1vw;
+    /* child layout */
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    overflow: hidden auto;
+    scrollbar-width: thin;
     
-    flex-grow: 1;
-    flex-basis: 200px;
+    /* this element layout */
+    flex-grow: 0;
 }
-@media screen and (min-aspect-ratio: 22/21) {
-    /* Screen is wide, use fewer columns */
+@media screen and (min-aspect-ratio: 1000/978) {
     #thumbs {
-        grid-template-columns: repeat(2, 3fr);
+        flex-grow: 1;
+        flex-basis: 200px;
     }
 }
 .thumb-container {
     position: relative;
+    /* basis includes #thumbs{gap:10px}, times four gaps distributed over five "columns" */
+    flex-basis: calc(20% - 10px * 4 / 5);
+    flex-shrink: 1;
+}
+@media screen and (min-aspect-ratio: 1000/978) {
+    .thumb-container {
+        /* basis includes #thumbs{gap:10px}, distributed over two "columns" */
+        flex-basis: calc(50% - 10px / 2);
+    }
 }
 .thumb-container img {
     /* make thumbnails square */
@@ -151,6 +167,14 @@ button.disabled, button.disabled:hover {
 .delete-icon:hover  {background-color: lightpink;}
 
 /* SPECIFIC ITEMS */
+pano-container {
+    /* For the life of me, I cannot figure out why 100% does not work below. It
+    winds up with unbounded height for very wide windows. What is the containing
+    block here, and why isn't it statically-positioned #stage-container?! It
+    cant be html, right? */
+    /* Subtract margin used by body and #stage-container */
+    max-height: calc(100vh - 16px - 1vh);
+}
 #save-view {
     height: 60px;
     aspect-ratio: 1/1;
