--- a/src/walkaround/composer.css
+++ b/src/walkaround/composer.css
@@ -99,6 +99,8 @@ button.disabled, button.disabled:hover {
     scrollbar-width: thin;
     
     /* this element layout */
+    /* min-height is the height of one .img-container */
+    min-height: 20%;
     flex-grow: 0;
 }
 @media screen and (min-aspect-ratio: 1000/978) {
@@ -186,12 +188,9 @@ walkaround-viewer {
     /* appearance */
     color: grey;
     font-size: 2em;
-    /* alignment */
-    padding: 10%;
-    padding-right: calc(10% + 30px); /* leave room for dl button */
-    position: absolute;
+    /* alignment, skewed slightly left to make room for download button */
+    width: 90%;
     align-self: center;
-    justify-self: center;
     text-align: center;
 }
 .placeholder:not(:last-child) {
